@@ -1,0 +1,279 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+<refentry id="class-gdkdisplaymanager">
+  <refnamediv>
+    <refname>gtk.gdk.DisplayManager</refname>
+
+    <refpurpose>maintains a list of all open <link
+    linkend="class-gdkdisplays"><classname>gtk.gdk.Displays</classname></link>
+</refpurpose>
+  </refnamediv>
+
+  <refsect1>
+    <title>Synopsis</title>
+
+    <classsynopsis language="python">
+      <ooclass><classname>gtk.gdk.DisplayManager</classname></ooclass>
+      <ooclass><classname><link linkend="class-gobject">gobject.GObject</link></classname></ooclass>
+      <methodsynopsis language="python">
+	<methodname><link linkend="method-gdkdisplaymanager--get-default-display">get_default_display</link></methodname>
+	<methodparam></methodparam>  </methodsynopsis>
+      <methodsynopsis language="python">
+	<methodname><link linkend="method-gdkdisplaymanager--set-default-display">set_default_display</link></methodname>
+	<methodparam><parameter role="keyword">display</parameter></methodparam>
+      </methodsynopsis>
+      <methodsynopsis language="python">
+	<methodname><link linkend="method-gdkdisplaymanager--list-displays">list_displays</link></methodname>
+	<methodparam></methodparam>  </methodsynopsis>
+    </classsynopsis>
+
+    <programlisting>
+<emphasis role="bold">Functions</emphasis>
+
+<methodsynopsis language="python">
+	<methodname><link linkend="function-gdk--display-manager-get">gtk.gdk.display_manager_get</link></methodname>
+	<methodparam></methodparam>
+      </methodsynopsis></programlisting>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Ancestry</title>
+
+<synopsis>+-- <link linkend="class-gobject">gobject.GObject</link>
+  +-- <link linkend="class-gdkdisplaymanager">gtk.gdk.DisplayManager</link>
+</synopsis>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Properties</title>
+
+    <blockquote role="properties">
+      <informaltable pgwide="1" frame="none">
+	<tgroup cols="3">
+	  <colspec column="1" colwidth="1in"/>
+	  <colspec column="2" colwidth="1in"/>
+	  <colspec column="3" colwidth="4in"/>
+	  <tbody>
+
+	    <row valign="top">
+	      <entry>"default-display"</entry>
+	      <entry>Read-Write</entry>
+
+	      <entry>The default <link
+linkend="class-gdkdisplay"><classname>gtk.gdk.Display</classname></link>. Available
+in GTK+ 2.2 and above.</entry>
+	    </row>
+
+	  </tbody>
+	</tgroup>
+      </informaltable>
+    </blockquote>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Signal Prototypes</title>
+
+    <variablelist>
+      <varlistentry>
+        <term>"<link linkend="signal-gdkdisplaymanager--display-opened">display-opened</link>"</term>
+        <listitem>
+          <methodsynopsis language="python"><methodname>callback</methodname>
+            <methodparam><parameter>displaymanager</parameter></methodparam>
+            <methodparam><parameter>display</parameter></methodparam>
+            <methodparam><parameter>user_param1</parameter></methodparam>
+            <methodparam><parameter>...</parameter></methodparam>
+          </methodsynopsis>
+        </listitem>
+      </varlistentry>
+    </variablelist>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Description</title>
+
+    <note>
+      <para>This object is available in PyGTK 2.2 and above.</para>
+    </note>
+
+    <para>The <link
+ linkend="class-gdkdisplaymanager"><classname>gtk.gdk.DisplayManager</classname></link>
+ is a singleton object that offers notification when displays appear or
+ disappear or the default display changes. The global <link
+ linkend="class-gdkdisplaymanager"><classname>gtk.gdk.DisplayManager</classname></link>
+ object is returned from the <link
+ linkend="function-gdk--display-manager-get"><function>gtk.gdk.display_manager_get</function>()</link>
+ function.</para>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Methods</title>
+
+    <refsect2 id="method-gdkdisplaymanager--get-default-display">
+      <title>gtk.gdk.DisplayManager.get_default_display</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>get_default_display</methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>a <link
+	  linkend="class-gdkdisplay"><classname>gtk.gdk.Display</classname></link>,
+	  or <literal>None</literal> if there is no default
+	  display.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+	<para>This method is available in PyGTK 2.2 and above.</para>
+      </note>
+
+      <para>The <methodname>get_default_display</methodname>() method
+returns the default <link
+linkend="class-gdkdisplay"><classname>gtk.gdk.Display</classname></link>.</para>
+
+    </refsect2>
+
+    <refsect2 id="method-gdkdisplaymanager--set-default-display">
+      <title>gtk.gdk.DisplayManager.set_default_display</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>set_default_display</methodname>
+	  <methodparam><parameter role="keyword">display</parameter></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><parameter role="keyword">display</parameter>&nbsp;:</term>
+	  <listitem><simpara>a <link
+	  linkend="class-gdkdisplay"><classname>gtk.gdk.Display</classname></link></simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+	<para>This method is available in PyGTK 2.2 and above.</para>
+      </note>
+
+      <para>The <methodname>set_default_display</methodname>() method sets
+the <link
+linkend="class-gdkdisplay"><classname>gtk.gdk.Display</classname></link>
+specified by <parameter>display</parameter> as the default display.</para>
+
+    </refsect2>
+
+    <refsect2 id="method-gdkdisplaymanager--list-displays">
+      <title>gtk.gdk.DisplayManager.list_displays</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>list_displays</methodname>
+	  <methodparam></methodparam>  </methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>a list containing <link
+	  linkend="class-gdkdisplay"><classname>gtk.gdk.Display</classname></link>
+	  objects.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+	<para>This method is available in PyGTK 2.2 and above.</para>
+      </note>
+
+      <para>The <methodname>list_displays</methodname>() method returns a
+list contining all currently open displays.</para>
+
+    </refsect2>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Functions</title>
+
+    <refsect2 id="function-gdk--display-manager-get">
+      <title>gtk.gdk.display_manager_get</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>gtk.gdk.display_manager_get</methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	<term><emphasis>Returns</emphasis>&nbsp;:</term> <listitem><simpara>
+	  the singleton <link
+	  linkend="class-gdkdisplaymanager"><classname>gtk.gdk.DisplayManager</classname></link>
+	  object.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+
+      <note>
+	<para>This function is available in PyGTK 2.2 and above.</para>
+      </note>
+
+      <para>The <methodname>gtk.gdk.display_manager_get</methodname>()
+method returns the global <link
+linkend="class-gdkdisplaymanager"><classname>gtk.gdk.DisplayManager</classname></link>
+singleton.</para>
+
+    </refsect2>
+
+  </refsect1>
+
+  <refsect1>
+    <title>Signals</title>
+
+    <refsect2 id="signal-gdkdisplaymanager--display-opened">
+      <title>The "display-opened" Signal</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>callback</methodname>
+	  <methodparam><parameter>displaymanager</parameter></methodparam>
+	  <methodparam><parameter>display</parameter></methodparam>
+	  <methodparam><parameter>user_param1</parameter></methodparam>
+	  <methodparam><parameter>...</parameter></methodparam>
+	</methodsynopsis></programlisting>
+
+      <variablelist>
+	<varlistentry>
+	  <term><parameter>displaymanager</parameter>&nbsp;:</term>
+	  <listitem><simpara>the displaymanager that received the
+signal</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><parameter>display</parameter>&nbsp;:</term>
+	  <listitem><simpara>the display that was opened</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><parameter>user_param1</parameter>&nbsp;:</term>
+          <listitem><simpara>the first user parameter (if any) specified
+with the <link
+linkend="method-gobject--connect"><methodname>connect</methodname>()</link>
+method</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><parameter>...</parameter>&nbsp;:</term>
+	  <listitem><simpara>additional user parameters (if
+any)</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+
+      <note>
+	<para>This signal is available in GTK+ 2.2 and above.</para>
+      </note>
+
+      <para>The "display-opened" signal is emitted when  display is
+opened.</para>
+
+    </refsect2>
+
+  </refsect1>
+
+</refentry>
