@@ -23,6 +23,8 @@
 
 	* pygtk-gdkdisplay.xml Add.
 
+	* pygtk-gdkdisplaymanager.xml Add.
+
 2004-04-19  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreeview.xml (expand_to_path) (map_expanded_rows)
